--- a/EuroMobileApp/EuroMobileApp.iOS/EuroMobileApp.iOS.csproj
+++ b/EuroMobileApp/EuroMobileApp.iOS/EuroMobileApp.iOS.csproj
@@ -49,14 +49,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
-    <CodesignKey>Apple Development: HAROON QURESHI (JW52AZ7953)</CodesignKey>
+    <CodesignKey>iPhone Distribution: HAROON QURESHI (2KM9YKRUXV)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>None</MtouchLink>
     <MtouchInterpreter>-all</MtouchInterpreter>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <BuildIpa>false</BuildIpa>
-    <CodesignProvision>VS: WildCard Development</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -65,10 +64,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
-    <CodesignKey>Apple Development: HAROON QURESHI (JW52AZ7953)</CodesignKey>
+    <CodesignKey>Apple Distribution: HAROON QURESHI (2KM9YKRUXV)</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignProvision>
-    </CodesignProvision>
+    <CodesignProvision>EuroappliianceProvisioningPropfile</CodesignProvision>
+    <MtouchLink>SdkOnly</MtouchLink>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <AppExtensionDebugBundleId />
@@ -158,6 +157,26 @@
     <BundleResource Include="Resources\RobotoCondensed-Italic.ttf" />
     <BundleResource Include="Resources\RobotoCondensed-Light.ttf" />
     <BundleResource Include="Resources\RobotoCondensed-LightItalic.ttf" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\40-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\60-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\58-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\87-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\80-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120-2.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\180-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\20-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\40-2.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\29-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\58-2.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\40-3.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\80-2.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\76-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\152-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\167-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\1024-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120-3.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\180-2.png" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -240,7 +259,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\EuroMobileApp\EuroMobileApp.csproj">
-      <Project>{952E4BAD-02A3-4072-AEC9-CCC840E6F460}</Project>
+      <Project>{E0EC74DD-B20C-485A-97F5-922B3FA7D708}</Project>
       <Name>EuroMobileApp</Name>
     </ProjectReference>
   </ItemGroup>
