--- a/EuroMobileApp/EuroMobileApp.iOS/Info.plist
+++ b/EuroMobileApp/EuroMobileApp.iOS/Info.plist
@@ -32,7 +32,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>EURO</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.euroapplianceservice</string>
+	<string>com.euroapplianceservice.euro</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
