--- a/EuroMobileApp/EuroMobileApp.iOS/Info.plist
+++ b/EuroMobileApp/EuroMobileApp.iOS/Info.plist
@@ -42,7 +42,7 @@
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1</string>
+	<string>1.3</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FontsFree-Net-Konnect3.ttf</string>
@@ -63,12 +63,24 @@
 		<string>FontAwesome5Solid.otf</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string>This app needs access to the camera to take photos.</string>
+	<string>This Application will use your Camera for business purpose.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>This app needs access to microphone for taking videos.</string>
+	<string>This Application will use your Microphone for business purpose.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>This app needs access to the photo gallery for picking photos and videos.</string>
+	<string>This Application will use your Picture Gallery for business purpose.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app needs access to photos gallery for picking photos and videos.</string>
+	<string>This Application will use your Photo Gallery for business purpose.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>arm64</string>
+	</array>
 </dict>
 </plist>
