Euro Issue Fixed 25-01-2020

--- a/EuroMobileApp/EuroMobileApp.Android/EuroMobileApp.Android.csproj
+++ b/EuroMobileApp/EuroMobileApp.Android/EuroMobileApp.Android.csproj
@@ -237,7 +237,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadWrongLinkerErrorInfoBarEuroMobileAppAndroidHideInfoBar="True" TriggeredFromHotReload="False" />
+      <UserProperties TriggeredFromHotReload="False" XamarinHotReloadWrongLinkerErrorInfoBarEuroMobileAppAndroidHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
