--- a/EuroMobileApp/EuroMobileApp.iOS/Info.plist
+++ b/EuroMobileApp/EuroMobileApp.iOS/Info.plist
@@ -73,6 +73,8 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+    <string>audio</string>
+    <string>remote-notification</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
@@ -82,5 +84,8 @@
 	<array>
 		<string>arm64</string>
 	</array>
+  <key>ITSAppUsesNonExemptEncryption</key>
+  <false/>
+  
 </dict>
 </plist>
