--- a/EuroMobileApp/EuroMobileApp.Android/Properties/AndroidManifest.xml
+++ b/EuroMobileApp/EuroMobileApp.Android/Properties/AndroidManifest.xml
@@ -9,5 +9,9 @@
 	<uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<application android:label="EURO" android:icon="@mipmap/icon" android:usesCleartextTraffic="true"></application>
+	<application android:label="EURO" android:icon="@mipmap/icon" android:usesCleartextTraffic="true">
+    <provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+      <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+    </provider>
+  </application>
 </manifest>
