--- a/EuroMobileApp/EuroMobileApp/EuroMobileApp.csproj
+++ b/EuroMobileApp/EuroMobileApp/EuroMobileApp.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="RestSharp" Version="106.11.4" />
     <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.9" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
+    <PackageReference Include="Xam.Plugin.Media" Version="5.0.1" />
     <PackageReference Include="Xam.Plugin.SecureStorage" Version="1.0.13" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.0.0" />
