--- a/EuroMobileApp/EuroMobileApp/EuroMobileApp.csproj
+++ b/EuroMobileApp/EuroMobileApp/EuroMobileApp.csproj
@@ -110,6 +110,9 @@
     <EmbeddedResource Update="Views\ServicesTabPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SideMenuPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ViewImagePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
