NEW FEATURE WEB API CHANGES

--- a/EuroMobileApp/EuroMobileApp/EuroMobileApp.csproj
+++ b/EuroMobileApp/EuroMobileApp/EuroMobileApp.csproj
@@ -80,6 +80,9 @@
     <EmbeddedResource Update="Views\ApplianceTabPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\CustomerDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PageContentView\WorkOrderApplianceContentView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
