Image and send invoice changes

--- a/EuroMobileApp/EuroMobileApp.Android/EuroMobileApp.Android.csproj
+++ b/EuroMobileApp/EuroMobileApp.Android/EuroMobileApp.Android.csproj
@@ -54,7 +54,7 @@
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
     <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
-    <AndroidSupportedAbis />
+    <AndroidSupportedAbis>x86;x86_64</AndroidSupportedAbis>
     <AndroidPackageFormat>aab</AndroidPackageFormat>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
