--- a/EuroWebApi/Web.config
+++ b/EuroWebApi/Web.config
@@ -73,8 +73,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ADO" connectionString="Data Source=DESKTOP-6ULSOIQ;Initial Catalog=EURO_QA;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="EURODbContext" connectionString="metadata=res://*/Models.Euro.csdl|res://*/Models.Euro.ssdl|res://*/Models.Euro.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6ULSOIQ;initial catalog=EURO_QA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ADO" connectionString="Data Source=bliss.herosite.pro;Initial Catalog=Eurodb;Persist Security Info=True;User ID=HkInfotech;Password=V!sh@l1331;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EURODbContext" connectionString="metadata=res://*/Models.Euro.csdl|res://*/Models.Euro.ssdl|res://*/Models.Euro.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bliss.herosite.pro;initial catalog=Eurodb;persist security info=True;user id=HkInfotech;password=V!sh@l1331;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
