--- a/EuroWebApi/Web.Release.config
+++ b/EuroWebApi/Web.Release.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="ADO" connectionString="Data Source=bliss.herosite.pro;Initial Catalog=Eurodb;Persist Security Info=True;User ID=HkInfotech;Password=V!sh@l1331;Integrated Security=True" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="EURODbContext" connectionString="metadata=res://*/Models.Euro.csdl|res://*/Models.Euro.ssdl|res://*/Models.Euro.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bliss.herosite.pro;initial catalog=Eurodb;persist security info=True;user id=HkInfotech;password=V!sh@l1331;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
